# clion-cmake-sdl2-template

./: CMakeLists.txt
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_endian.h  SDL_system.h  SDL_video.h
scripts/: main.c  matrix.c  matrix.h  mesh.c  mesh.h  triangle.c  triangle.h  vector.c  vector.h
scripts/display/: display.c  display.h
